@@ -11,11 +11,12 @@ use Automattic\WooCommerce\Utilities\OrderUtil;
  * @since 4.0.0
  */
 class WC_Stripe_Helper {
-	const LEGACY_META_NAME_FEE      = 'Stripe Fee';
-	const LEGACY_META_NAME_NET      = 'Net Revenue From Stripe';
-	const META_NAME_FEE             = '_stripe_fee';
-	const META_NAME_NET             = '_stripe_net';
-	const META_NAME_STRIPE_CURRENCY = '_stripe_currency';
+	const LEGACY_META_NAME_FEE         = 'Stripe Fee';
+	const LEGACY_META_NAME_NET         = 'Net Revenue From Stripe';
+	const META_NAME_FEE                = '_stripe_fee';
+	const META_NAME_NET                = '_stripe_net';
+	const META_NAME_STRIPE_CURRENCY    = '_stripe_currency';
+	const PAYMENT_AWAITING_ACTION_META = '_stripe_payment_awaiting_action';
 
 	/**
 	 * List of legacy Stripe gateways.
@@ -1177,5 +1178,39 @@ class WC_Stripe_Helper {
 		}
 
 		return array_merge( $gateway_ids, wp_list_pluck( $gateways, 'id', 'id' ) );
+	}
+
+	/**
+	 * Adds metadata to the order to indicate that the payment is awaiting action.
+	 *
+	 * This meta is primarily used to prevent orders from being cancelled by WooCommerce's hold stock settings.
+	 *
+	 * @param WC_Order $order The order to add the metadata to.
+	 * @param bool     $save  Whether to save the order after adding the metadata.
+	 *
+	 * @return void
+	 */
+	public static function set_payment_awaiting_action( $order, $save = true ) {
+		$order->update_meta_data( self::PAYMENT_AWAITING_ACTION_META, wc_bool_to_string( true ) );
+
+		if ( $save ) {
+			$order->save();
+		}
+	}
+
+	/**
+	 * Removes the metadata from the order that was used to indicate that the payment was awaiting action.
+	 *
+	 * @param WC_Order $order The order to remove the metadata from.
+	 * @param bool     $save  Whether to save the order after removing the metadata.
+	 *
+	 * @return void
+	 */
+	public static function remove_payment_awaiting_action( $order, $save = true ) {
+		$order->delete_meta_data( self::PAYMENT_AWAITING_ACTION_META );
+
+		if ( $save ) {
+			$order->save();
+		}
 	}
 }
